--- a/components/layout/style.css
+++ b/components/layout/style.css
@@ -7,6 +7,7 @@
 
     /* Shadows */
     --norm-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    --lg-shadow: 0px 8px 8px rgba(0, 0, 0, 0.25);
 
     /* Transitions */
     --slow: ease-in-out 0.3s;
@@ -65,4 +66,8 @@ h5 {font-size: 1.333rem;}
 span {
   font-weight: 400;
   color: var(--gold);
+}
+
+.subtle {
+  color: var(--black-3);
 }
