--- a/components/layout/style.css
+++ b/components/layout/style.css
@@ -33,11 +33,15 @@ html {
     width: 100%;
     height: 100%;
   }
-  
+
   *,
   *:before,
   *:after {
     box-sizing: inherit;
+  }
+
+  main {
+    width: 100%;
   }
   
   /* typography */
