--- a/components/layout/style.css
+++ b/components/layout/style.css
@@ -4,6 +4,7 @@
     --black-3: hsl(212, 16%, 54%);
     --grey: hsl(201, 6%, 53%);
     --off-white: hsla(0, 0%, 100%, 0.9);
+    --eggshell: hsla(0, 2%, 84%, 0.9);
     --gold: hsl(42, 84%, 49%);
     --gold-2: hsl(41, 84%, 68%);
 
