--- a/components/layout/style.css
+++ b/components/layout/style.css
@@ -1,12 +1,12 @@
 :root {
     /* Colors */
-    --black: hsl(236, 69%, 14%);
+    --black: hsl(236, 69%, 14%); /* hex: #0b0e3c */
     --black-3: hsl(212, 16%, 54%);
     --grey: hsl(201, 6%, 53%);
     --off-white: hsla(0, 0%, 100%, 0.9);
     --eggshell: hsla(0, 2%, 84%, 0.9);
-    --gold: hsl(42, 84%, 49%);
-    --gold-2: hsl(41, 84%, 68%);
+    --gold: hsl(42, 84%, 49%); /* hex: #e6a714 */
+    --gold-2: hsl(41, 84%, 68%); /* hex: #f2c769 */
 
     /* Shadows */
     --norm-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
