Past sessions gallery and first tt

--- a/components/layout/style.css
+++ b/components/layout/style.css
@@ -78,3 +78,10 @@ span {
 .subtle {
   color: var(--black-3);
 }
+
+a.disabled {
+  pointer-events: none;
+  cursor: default;
+  background: var(--grey) !important;
+  border: solid 1px var(--grey) !important;
+}
