--- a/components/layout/style.css
+++ b/components/layout/style.css
@@ -26,7 +26,7 @@ html {
     font-size: 62.5%;
     color: var(--black);
     overflow-x: hidden;
-    /* scroll-behavior: smooth; */
+    scroll-behavior: smooth;
     scroll-padding: 70px;
   }
   
